[package]
name = "tiny_maps"
version = "0.1.0"
authors = ["Aleksandr Ovchinnikov <mail@mr1sunshine.com>"]
edition = "2018"
description = "Tiny Maps with Rust."
readme = "README.md"
repository = "https://github.com/mr1sunshine/tiny-maps-rs"
license-file = "LICENSE"
keywords = ["maps", "openstreetmap"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.2"
hyper = {version = "0.14.0", features = ["full"]}
tokio = { version = "1.0.0", features = ["full"] }
winit = { git = "https://github.com/mr1sunshine/winit.git", branch = "mr1sunshine/fix-macos-request-redraw" }
wgpu = "0.6.0"
futures = "0.3.7"
bytes = "1.0.0"
anyhow = "1.0"
image = "0.23"
bytemuck = "1.4"
geo = "0.16.0"
derivative = "2.1.1"
log = "0.4.0"
env_logger = "0.8.2"





